# libsimplefft

./: Android.mk  Application.mk  Makefile.am  README  alloc.h  autogen.sh  build-android.sh  configure.ac  defines.h  fft.c  libsimplefft.c  makefile  makefile.bak  twiddle.c  util.c  util.h
example/: main  main.c
java/com/github/kneo/libsimplefft/: Convolution.java  FFT.java  SimpleFFT.java
javasimplefft/: com_github_kneo_libsimplefft_Convolution.h  com_github_kneo_libsimplefft_FFT.h
libsimplefft/: Android.mk  Makefile.am  alloc.c  alloc.h  android.mk  convolution.c  convolution.h  defines.h  fft.c  fft.h  libsimplefft.c  libsimplefft.cbp  libsimplefft.h  libsimplefft.layout  ndfft.c  twiddle.c  util.c  util.h
simplefft4j/: Android.mk  Makefile.am  f4jdefines.h  in.waslos_kneo_libsimplefft_FFTProcessor.c  in_waslos_kneo_libsimplefft_FFTProcessor.h
simplefft4j/in/waslos/kneo/libsimplefft/: FFTProcessor.java
simplefft4j/java/in/waslos/kneo/libsimplefft/: FFTProcessor.java
src/: alloc.c  alloc.h  defines.h  fft.c  fft.h  libsimplefft.c  libsimplefft.h  twiddle.c  twiddle.h  util.c  util.h
