dnl Process this file with autoconf to produce a configure script.
AC_INIT(libsimplefft, 0.5.0, kkevin@gmx.net)
AC_CONFIG_AUX_DIR(config)
AC_CONFIG_MACRO_DIR(m4)
AC_CONFIG_SRCDIR(libsimplefft/libsimplefft.h)

LIB_CURRENT=0
LIB_REVISION=5
LIB_AGE=0
AC_SUBST(LIB_CURRENT)
AC_SUBST(LIB_REVISION)
AC_SUBST(LIB_AGE)

AM_INIT_AUTOMAKE

AC_PROG_LIBTOOL

AC_PROG_CC

#AC_PROG_RANLIB

AC_CONFIG_HEADER(config.h)
AC_CONFIG_FILES(Makefile libsimplefft/Makefile)

AC_OUTPUT
