lib_LTLIBRARIES = libsimplefft.la

libsimplefft_la_SOURCES = alloc.c alloc.h defines.h fft.c fft.h libsimplefft.c libsimplefft.h twiddle.c twiddle.h util.c  util.h convolution.c convolution.h
libsimplefft_la_LDFLAGS = -lm --shared -fPIC

libsimplefft_ladir=$(includedir)/libsimplefft
libsimplefft_la_HEADERS = libsimplefft.h alloc.h util.h twiddle.h fft.h defines.h convolution.h


